--- a/Combined/Ritav/effects/effects.html
+++ b/Combined/Ritav/effects/effects.html
@@ -35,7 +35,7 @@
       <a href="../../Sristi/donation/donation.html" target="blank">Donation</a>
       <a href="../Sristi/FAQs/index.html" target="blank">FAQ</a>
       <a href="../../Harsh/news.html" target="blank">News</a>
-      <a href="../Ritav/Causes/causes.html" target="blank">Causes</a>
+      <a href="../Causes/causes.html" target="blank">Causes</a>
       <a href="../Ritav/effects/effects.html" target="blank">Effects</a>
       <a href="../../Harsh/gal.html" target="blank">Gallery</a>
       <a href="#">Solutions</a>
