--- a/Combined/Ritav/Causes/causes.html
+++ b/Combined/Ritav/Causes/causes.html
@@ -23,14 +23,14 @@
   <body style="background-color: #1d1c1c">
     <nav>
       <a href="../../Harsh/home.html" target="blank">Home</a>
-      <a href="../../Yash/blog.html" target="blank">Blog</a>
+      <a href="../../Yash/Blog/blog.html" target="blank">Blog</a>
       <a href="../../Sristi/donation/donation.html" target="blank">Donation</a>
       <a href="../Sristi/FAQs/index.html" target="blank">FAQ</a>
       <a href="../../Harsh/news.html" target="blank">News</a>
       <a href="../Ritav/Causes/causes.html" target="blank">Causes</a>
       <a href="../effects/effects.html" target="blank">Effects</a>
       <a href="../../Harsh/gal.html" target="blank">Gallery</a>
-      <a href="#">Solutions</a>
+      <a href="../../Yash/solutions/solutions.html">Solutions</a>
       <div class="animation start-home" />
     </nav>
     <div
@@ -51,7 +51,7 @@
           ></div>
           <div class="carousel-caption d-none d-md-block">
             <h5>Polar ice caps</h5>
-            <p>
+            <p style="text-align: center">
               Polar ice caps are melting as global warming causes climate
               change.
             </p>
@@ -65,7 +65,7 @@
 
           <div class="carousel-caption d-none d-md-block">
             <h5>Climate change concerns</h5>
-            <p>
+            <p style="text-align: center">
               Global Week for Future, were a series of international strikes and
               protests to demand action be taken to address climate change.
             </p>
@@ -79,7 +79,9 @@
 
           <div class="carousel-caption d-none d-md-block">
             <h5>Droughts</h5>
-            <p>Chinese plateau province sees worst drought in 10 years.</p>
+            <p style="text-align: center">
+              Chinese plateau province sees worst drought in 10 years.
+            </p>
           </div>
         </div>
       </div>
@@ -438,7 +440,7 @@
         </div>
       </div>
       <div class="footer-right">
-        <p class="footer-company-about">
+        <p class="footer-company-about" style="font-size: 17px">
           <span>About the company</span>
           To help solve the climate crisis by organizing local business leaders
           to be more effective advocates for climate action within their
