--- a/Combined/Ritav/effects/effects.html
+++ b/Combined/Ritav/effects/effects.html
@@ -31,14 +31,14 @@
   <body>
     <nav>
       <a href="../../Harsh/home.html" target="blank">Home</a>
-      <a href="../../Yash/blog.html" target="blank">Blog</a>
+      <a href="../../Yash/Blog/blog.html" target="blank">Blog</a>
       <a href="../../Sristi/donation/donation.html" target="blank">Donation</a>
       <a href="../Sristi/FAQs/index.html" target="blank">FAQ</a>
       <a href="../../Harsh/news.html" target="blank">News</a>
       <a href="../Causes/causes.html" target="blank">Causes</a>
       <a href="../Ritav/effects/effects.html" target="blank">Effects</a>
       <a href="../../Harsh/gal.html" target="blank">Gallery</a>
-      <a href="#">Solutions</a>
+      <a href="../../Yash/solutions/solutions.html">Solutions</a>
 
       <div class="animation start-home" />
     </nav>
@@ -208,15 +208,30 @@
 
     <div class="center">
       <div class="img-container">
-        <img
-          src="https://svs.gsfc.nasa.gov/vis/a000000/a003500/a003537/ThwaitesPrint.8400.jpg"
-          alt=""
-        />
+        <img src="./ThwaitesPrint.8400.jpg" alt="" />
         <img
           class="transition-img"
-          src="https://interactive.pri.org/2019/05/antarctica/images/2019-02-28-Thwaites-05-Edited-7645.jpg"
+          src="./2019-02-28-Thwaites-05-Edited-7645.jpg"
           alt=""
         />
+      </div>
+    </div>
+    <hr />
+    <h2>Florida Keys</h2>
+
+    <div class="center">
+      <div class="img-container">
+        <img src="./fl1.jpg" alt="" />
+        <img class="transition-img" src="./fl2.jpg" alt="" />
+      </div>
+    </div>
+    <hr />
+    <h2>Himalayan Glaciers</h2>
+
+    <div class="center">
+      <div class="img-container" style="width: 600px; height: 600px">
+        <img src="./Himalayan1.jpg" alt="" />
+        <img class="transition-img" src="./Himalayan2.jpg" alt="" />
       </div>
     </div>
 
@@ -260,7 +275,7 @@
         </div>
       </div>
       <div class="footer-right">
-        <p class="footer-company-about">
+        <p class="footer-company-about" style="font-size: 17px">
           <span>About the company</span>
           To help solve the climate crisis by organizing local business leaders
           to be more effective advocates for climate action within their
