--- a/Combined/Sristi/donation/donation.html
+++ b/Combined/Sristi/donation/donation.html
@@ -31,14 +31,14 @@
   <body>
     <nav>
       <a href="../../Harsh/home.html" target="blank">Home</a>
-      <a href="../../Yash/blog.html" target="blank">Blog</a>
+      <a href="../../Yash/Blog/blog.html" target="blank">Blog</a>
       <a href="../../Sristi/donation/donation.html" target="blank">Donation</a>
       <a href="../FAQs/index.html" target="blank">FAQ</a>
       <a href="../../Harsh/news.html" target="blank">News</a>
       <a href="../../Ritav/Causes/causes.html" target="blank">Causes</a>
       <a href="../../Ritav/effects/effects.html" target="blank">Effects</a>
       <a href="../../Harsh/gal.html" target="blank">Gallery</a>
-      <a href="#">Solutions</a>
+      <a href="../../Yash/solutions/solutions.html">Solutions</a>
       <div class="animation start-home"></div>
     </nav>
     <h1 style="text-align: center; font-size: 90px; font-family: Faustina">
