Changes in Bg login

--- a/Combined/Harsh/home.html
+++ b/Combined/Harsh/home.html
@@ -71,13 +71,13 @@
     <nav class="navbari">
       <a href="../../Harsh/home.html" target="blank">Home</a>
       <a href="../Yash/Blog/blog.html" target="blank">Blog</a>
-      <a href="../../Sristi/donation/donation.html" target="blank">Donation</a>
-      <a href="../Sristi/FAQs/index.html" target="blank">FAQ</a>
       <a href="../../Harsh/news.html" target="blank">News</a>
       <a href="../Ritav/Causes/causes.html" target="blank">Causes</a>
       <a href="../Ritav/effects/effects.html" target="blank">Effects</a>
       <a href="../../Harsh/gal.html" target="blank">Gallery</a>
-      <a href="../Yash/solutions/solutions.html"></a>
+      <a href="../Yash/solutions/solutions.html">Solutions</a>
+      <a href="../Sristi/FAQs/index.html" target="blank">FAQ</a>
+      <a href="../../Sristi/donation/donation.html" target="blank">Donation</a>
       <div class="animation start-home" />
     </nav>
 
@@ -481,7 +481,7 @@
         </div>
       </div>
       <div class="footer-right">
-        <p class="footer-company-about">
+        <p class="footer-company-about" style="font-size: 17px">
           <span>About the company</span>
           To help solve the climate crisis by organizing local business leaders
           to be more effective advocates for climate action within their
