--- a/Combined/Harsh/news.html
+++ b/Combined/Harsh/news.html
@@ -64,7 +64,7 @@
   </head>
 
   <body style="background-color: #1d1c1c">
-    <div
+    <!-- <div
       class="logobanner"
       style="display: flex; height: 80px; background-color: black"
     >
@@ -82,20 +82,20 @@
         <a href="#"><i class="fa fa2 fa-linkedin"></i></a>
         <a href="#"><i class="fa fa2 fa-youtube"></i></a>
       </div>
-    </div>
+    </div> -->
 
     <!----NAVBAR  ------41becc-------------------->
 
     <nav class="navbari">
       <a href="../../Harsh/home.html" target="blank">Home</a>
       <a href="../Yash/Blog/blog.html" target="blank">Blog</a>
-      <a href="../../Sristi/donation/donation.html" target="blank">Donation</a>
-      <a href="../Sristi/FAQs/index.html" target="blank">FAQ</a>
       <a href="../../Harsh/news.html" target="blank">News</a>
       <a href="../Ritav/Causes/causes.html" target="blank">Causes</a>
       <a href="../Ritav/effects.html" target="blank">Effects</a>
       <a href="../../Harsh/gal.html" target="blank">Gallery</a>
       <a href="../Yash/solutions/solutions.html">Solutions</a>
+      <a href="../Sristi/FAQs/index.html" target="blank">FAQ</a>
+      <a href="../../Sristi/donation/donation.html" target="blank">Donation</a>
       <div class="animation start-home" />
     </nav>
 
@@ -613,7 +613,7 @@
         </div>
       </div>
       <div class="footer-right">
-        <p class="footer-company-about">
+        <p class="footer-company-about" style="font-size: 17px">
           <span>About the company</span>
           To help solve the climate crisis by organizing local business leaders
           to be more effective advocates for climate action within their
