--- a/Combined/Sristi/login/login.html
+++ b/Combined/Sristi/login/login.html
@@ -22,7 +22,7 @@
             <input class="psw" type="password" placeholder="Password" />
           </div>
           <div class="footer">
-            <a href="../../Harsh/home.html" target="_blank">
+            <a href="../payment/payment.html" target="_blank">
               <button class="btn" type="button">- Login -</button>
             </a>
           </div>
