--- a/Combined/Sristi/FAQs/index.html
+++ b/Combined/Sristi/FAQs/index.html
@@ -31,13 +31,13 @@
     <nav>
       <a href="../../Harsh/home.html" target="blank">Home</a>
       <a href="../../Yash/Blog/blog.html" target="blank">Blog</a>
-      <a href="../../Sristi/donation/donation.html" target="blank">Donation</a>
-      <a href="../../Sristi/FAQs/index.html" target="blank">FAQ</a>
       <a href="../../Harsh/news.html" target="blank">News</a>
       <a href="../Ritav/Causes/causes.html" target="blank">Causes</a>
       <a href="../Ritav/effects.html" target="blank">Effects</a>
       <a href="../../Harsh/gal.html" target="blank">Gallery</a>
       <a href="../../Yash/solutions/solutions.html">Solutions</a>
+      <a href="../../Sristi/FAQs/index.html" target="blank">FAQ</a>
+      <a href="../../Sristi/donation/donation.html" target="blank">Donation</a>
 
       <div class="animation start-home" />
     </nav>
@@ -266,7 +266,7 @@
         </div>
       </div>
       <div class="footer-right">
-        <p class="footer-company-about">
+        <p class="footer-company-about" style="font-size: 17px">
           <span>About the company</span>
           To help solve the climate crisis by organizing local business leaders
           to be more effective advocates for climate action within their
