--- a/Combined/Sristi/donation/donation.html
+++ b/Combined/Sristi/donation/donation.html
@@ -62,7 +62,9 @@
           impacts of climate change.
         </p>
         <input type="text" placeholder="$50" />
-        <div class="button">Donate Us</div>
+        <a href="../login/login.html">
+          <div class="button">Donate Us</div>
+        </a>
       </div>
       <div>
         <img src="charity.png" alt="" />
@@ -108,7 +110,7 @@
         </div>
       </div>
       <div class="footer-right">
-        <p class="footer-company-about">
+        <p class="footer-company-about" style="font-size: 17px">
           <span>About the company</span>
           To help solve the climate crisis by organizing local business leaders
           to be more effective advocates for climate action within their
